; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_wildmatch.c_test_core_wildmatch__recursion.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_wildmatch.c_test_core_wildmatch__recursion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [58 x i8] c"-adobe-courier-bold-o-normal--12-120-75-75-m-70-iso8859-1\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"-*-*-*-*-*-*-12-*-*-*-m-*-*-*\00", align 1
@.str.2 = private unnamed_addr constant [58 x i8] c"-adobe-courier-bold-o-normal--12-120-75-75-X-70-iso8859-1\00", align 1
@.str.3 = private unnamed_addr constant [58 x i8] c"-adobe-courier-bold-o-normal--12-120-75-75-/-70-iso8859-1\00", align 1
@.str.4 = private unnamed_addr constant [61 x i8] c"XXX/adobe/courier/bold/o/normal//12/120/75/75/m/70/iso8859/1\00", align 1
@.str.5 = private unnamed_addr constant [33 x i8] c"XXX/*/*/*/*/*/*/12/*/*/*/m/*/*/*\00", align 1
@.str.6 = private unnamed_addr constant [61 x i8] c"XXX/adobe/courier/bold/o/normal//12/120/75/75/X/70/iso8859/1\00", align 1
@.str.7 = private unnamed_addr constant [46 x i8] c"abcd/abcdefg/abcdefghijk/abcdefghijklmnop.txt\00", align 1
@.str.8 = private unnamed_addr constant [14 x i8] c"**/*a*b*g*n*t\00", align 1
@.str.9 = private unnamed_addr constant [47 x i8] c"abcd/abcdefg/abcdefghijk/abcdefghijklmnop.txtz\00", align 1
@.str.10 = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@.str.11 = private unnamed_addr constant [6 x i8] c"*/*/*\00", align 1
@.str.12 = private unnamed_addr constant [8 x i8] c"foo/bar\00", align 1
@.str.13 = private unnamed_addr constant [12 x i8] c"foo/bba/arr\00", align 1
@.str.14 = private unnamed_addr constant [13 x i8] c"foo/bb/aa/rr\00", align 1
@.str.15 = private unnamed_addr constant [9 x i8] c"**/**/**\00", align 1
@.str.16 = private unnamed_addr constant [12 x i8] c"abcXdefXghi\00", align 1
@.str.17 = private unnamed_addr constant [5 x i8] c"*X*i\00", align 1
@.str.18 = private unnamed_addr constant [15 x i8] c"ab/cXd/efXg/hi\00", align 1
@.str.19 = private unnamed_addr constant [11 x i8] c"*/*X*/*/*i\00", align 1
@.str.20 = private unnamed_addr constant [13 x i8] c"**/*X*/**/*i\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_wildmatch__recursion() #0 {
  %1 = call i32 @assert_matches(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %2 = call i32 @assert_matches(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 0, i32 0, i32 0)
  %3 = call i32 @assert_matches(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 0, i32 0, i32 0)
  %4 = call i32 @assert_matches(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.5, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %5 = call i32 @assert_matches(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.5, i64 0, i64 0), i32 0, i32 0, i32 0, i32 0)
  %6 = call i32 @assert_matches(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.8, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %7 = call i32 @assert_matches(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.9, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.8, i64 0, i64 0), i32 0, i32 0, i32 0, i32 0)
  %8 = call i32 @assert_matches(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i64 0, i64 0), i32 0, i32 0, i32 0, i32 0)
  %9 = call i32 @assert_matches(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.12, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i64 0, i64 0), i32 0, i32 0, i32 0, i32 0)
  %10 = call i32 @assert_matches(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.13, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %11 = call i32 @assert_matches(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.14, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i64 0, i64 0), i32 0, i32 0, i32 1, i32 1)
  %12 = call i32 @assert_matches(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.14, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.15, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %13 = call i32 @assert_matches(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.16, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.17, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %14 = call i32 @assert_matches(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.17, i64 0, i64 0), i32 0, i32 0, i32 1, i32 1)
  %15 = call i32 @assert_matches(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.19, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  %16 = call i32 @assert_matches(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.20, i64 0, i64 0), i32 1, i32 1, i32 1, i32 1)
  ret void
}

declare dso_local i32 @assert_matches(i8*, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
